--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,9 @@
+@charset "UTF-8";
+
 body {
     font-family: "Questrial", sans-serif;
     font-weight: 400;
     font-style: normal;
-
-
-
     font-family: "Noto Serif", serif;
     font-optical-sizing: auto;
     font-weight: 400;
@@ -12,12 +11,8 @@ body {
     font-variation-settings: "wdth"100;
 }
 
-
-
-
-
 .custom-container {
-    width: 1920px;
+    max-width: 1920px;
     margin-right: auto;
     margin-left: auto;
 }
@@ -26,8 +21,19 @@ header {
     position: relative;
 }
 
+header::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #333;
+    opacity: 0.87;
+    /* Прозрачность 87% */
+}
 
-nav {
+header nav {
     position: absolute !important;
     top: 0;
     left: 0;
@@ -35,3 +41,9 @@ nav {
     background-color: rgba(0, 0, 0, 0.2);
     padding: 10px;
 }
+
+header nav a.nav-link {
+    color: white;
+}
+
+/*# sourceMappingURL=main.css.map */
